# digital_casting_system_

./: .bumpversion.cfg  .editorconfig  .gitignore  404.html  AUTHORS.md  CHANGELOG.md  README.md  _conftest.py  _gen_ref_pages.py  index.html  mkdoc.yaml  mkdocs.yaml  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tasks.py
.github/: copilot-instructions.md
.github/workflows/: build-doc.yaml  build.yml  docs.yml  pr-checks.yml
SUMMARY/: index.html
api/: dcs.rst  index.html
api/api/: index.html
api/api_all/: index.html
api/package_desc/: index.html
api_nav/: index.html
author/: index.html
data/: README_file_naming.md
data/csv/: .csv  20230511_56agg_30G_76S_3FW_Thun_setuup.csv  20230607_test.csv  20230608_test.csv  20230615_54agg_67S_1.5FW.csv  20230704_50_agg_72S_1.5FW_ETH_temperature.csv  20230706_54agg_72S_1.5FW_ETH_temperature_120.csv  20230706_test.csv  20230713_54agg_70S_1.5FW_Acc_Temperature_120rpm.csv  20230713_54agg_70S_1.5FW_Temperature.csv  20230713_54agg_70S_1.5FW_Temperature_1120.csv  20230713_54agg_70S_1.5FW_Temperature_withCAC.csv  20230713_54agg_70S_1.5FW_Temperature_withCAC_120rpm.csv  20230713_54agg_strength_test.csv  20230720_50agg_57S_1.5FW_0225.csv  20230815_inital.csv  20231018_54agg_70S_3FW_pump_temperature.csv  20240109_50agg_76S_3FW_pumping_test_temperature.csv  20240125_50Agg_76S_fluidity_Stength_test_7CAC.csv  20240207_50Agg_81S_Stength_test.csv  20240208_50Agg_74S_column8x5c.csv  20240305_50_agg_10cac_diffXseed_eggshell_material_test.csv  20240306_50_agg_10cac_Eggshell_columnRE.csv  20240710_50_agg_75S_3FW__acccelerator_test.csv  20240807_test.csv  20240814_LShape.csv  20240815_LShape_76S.csv  20240821_LShape_76S.csv  20240822_MotorCurvedMode.csv  20240828_LShaspe_78S.csv
data/json/: 20230607_test.json  20230615_54_agg_1.5FW_ETH_CAC.json  20230615_54_agg_67_1.5FW.json  20230615_54_agg_67_1.5FW_ETH.json  20230615_54_agg_67_3FW_ETH.json  20230619_50_agg_3FW_ETH_CAC.json  20230626_50_agg_1.5FW_ETH_temperature.json  20230626_50_agg_1.5FW_ETH_temperature_1357.json  20230704_50_agg_72S_1.5FW_ETH_2.json  20230706_54agg_72S_1.5FW_temperature.json  20230713_54agg_70S_1.5FW_Temperature.json  20230713_54agg_70S_1.5FW_Temperature_1120.json  20230815_54agg_78S_3FW_StrengthTest.json  20230817_54agg_78S_1.5FW_PigmentTest_60rpm.json  20230901_54agg_64S_1.5FW_PigmentTest_120rpm.json  20230926_54agg_69S_5FW_PigmentTest_120rpm.json  20230928_54agg_72S_FW_StrengthTest_120rpm.json  20231003_54agg_70S_3FW_StrengthTest_60rpm.json  20231018_54agg_70S_1.5FW_pump_temperature.json  20231020_50agg_62S_3FW_pump_temperature.json  20240109_50agg_76S_3FW_pumping_test_correct.json  20240109_50agg_76S_3FW_pumping_test_temperature.json  20240109_50agg_76S_5FW_pumping_test_correct.json  20240109_50agg_81S_3FW_pumping_test_temperature.json  20240109_50agg_81S_3FW_pumping_test_temperature_height.json  20240123_50agg_75S_3FW_120_rpm.json  20240123_50agg_75S_3FW_7accelerator4Xseed.json  20240123_WarmWater_temperature_test.json  20240123_WarmWater_temperature_test_2.json  20240124_50Agg_74S_fluiditz_test.json  20240124_50Agg_74S_fluiditz_test_redo.json  20240124_50Agg_75S_fluidity_test_2.json  20240124_50Agg_75S_fluidity_test_8CAC.json  20240125_50Agg_76S_fluidity_Stength_test_10CAC.json  20240125_50Agg_76S_fluidity_Stength_test_7CAC.json  20240207_50Agg_81S_Stength_test.json  20240208_50Agg_74S_column8x5c.json  20240305_50_agg_10cac_diffXseed_eggshell_material_test.json  20240306_50_agg_10cac_Eggshell_column.json  20240306_50_agg_10cac_Eggshell_columnRE.json  (+4 more)
data/json/_Archive/: 20221010_curved_speed_test.json  (+2 more)
dev/: index.html
docs/: SUMMARY.md  api.md  api.rst  api_nav.md  conf.py  index.md  index.rst  installation.md  style.css
docs/api/: api_all.md
docs/reference/: __init__.md
example/: index.html
examples/: example_plc.py  index.html  main.py  realtime_example.py
examples/example/: index.html
ext_controllers/arduino/: placeholder.md
ext_controllers/plc/: readme.md  readme.txt
ext_controllers/robot/: ReadMe.md
installation/: index.html
license/: index.html
scripts/: dcs.py  main.py  wellcome_rob.py
search/: search_index.json
src/: __init__.py
src/dcs/: __init__.py  __main__.py  parameter_list_plc.txt
src/dcs_dev/: README.md  __init__.py  __main__.py  test.py  test_main.py  test_main_gui.py  test_main_plc.py  test_main_rob.py
src/digital_casting_system/: __init__.py  __main__.py
src/hal/: device.py  interface.py
src/infrastructure/: config_manager.py
src/tests/: test_main_gui.py  test_main_plc.py  test_main_rob.py
src/utils/: __init__.py
tests/: test_config_manager_integration.py  test_infrastructure.py  test_main_gui.py  test_main_plc.py  test_main_rob.py  test_plc.py
tests/hal/: conftest.py  test_plc.py
tutorial/: index.html
user/: index.html
(+352 files in other folders)
