[project]
name = "digital_casting_system"  # Fixed typo: "digtial" -> "digital"
version = "1.0.0"
description = "A digital control project for Digital Control System"
authors = [{ name = "Wei-Ting Chen", email = "chenwei@arch.ethz.ch" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "numpy>=1.26",
  "ruff>=0.8.2",
  "pyads>=3.3.9",
  "attrs>=17.4",
  "pydantic>=2.10.6",
  "pandas>=2.2.0",
  "compas<=2.9.0",
  "compas_rrc @ git+https://github.com/WeiTing1991/compas_rrc.git@main",
  "matplotlib>=3.8.4",
  "path>=17.1.0",
]

[project.optional-dependencies]
dev = ["ruff","pytest", "pytest-cov", "invoke>=0.14", "wheel", "bump-my-version", "twine", ]

docs = [
  "mkdocs",
  "mkdocstrings-python",
  "mkdocs-gen-files",
  "mkdocs-autorefs",
  "markdown",
  "mkdocs-include-markdown-plugin",
  "mkdocs-macros-plugin",
  "markdown-exec",
  "mkdocs-literate-nav",
  "mkdocs-shadcn>=0.9.1",
  "pymdown-extensions>=10.14.3",
]

[project.urls]
Changelog = "https://github.com/USI-FMAA/digital_casting_system/blob/master/CHANGELOG.md"
Documentation = "https://usi-fmaa.github.io/digital_casting_system/"
Homepage = "https://usi-fmaa.github.io/digital_casting_system/"
Issues = "https://github.com/USI-FMAA/digital_casting_system/issues"
Repository = "https://github.com/USI-FMAA/digital_casting_system"

[tool.ruff]
indent-width = 2
line-length = 120
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "RUF", # ruff-specific rules
]
ignore = [
  "D417", # missing parameter documentation
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests", "src/dcs_dev"]  # Fixed path to match your project structure
python_files = ["test_*.py", "tests.py"]
addopts = "-ra --strict --doctest-modules --doctest-glob=*.rst --tb=short"
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ALLOW_UNICODE ALLOW_BYTES NUMBER"
filterwarnings = "ignore::DeprecationWarning"
